--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,10 @@
     "test": "npm run unit && npm run e2e"
   },
   "dependencies": {
+    "axios": "^0.16.1",
+    "element-ui": "^1.2.8",
     "vue": "^2.2.2",
+    "vue-cookie": "^1.1.4",
     "vue-router": "^2.3.0"
   },
   "devDependencies": {
