--- a/server/config/config.json
+++ b/server/config/config.json
@@ -4,7 +4,8 @@
     "password": "root",
     "database": "stackoverflow",
     "host": "127.0.0.1",
-    "dialect": "postgres"
+    "dialect": "postgres",
+    "logging": false
   },
   "test": {
     "username": "root",
