--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "axios": "^0.16.1",
     "element-ui": "^1.2.8",
+    "sweetalert2": "^6.6.0",
     "vue": "^2.2.2",
     "vue-cookie": "^1.1.4",
     "vue-router": "^2.3.0"
